# sensor-lifespan

./: LICENSE  README.md  ingest.py  main.py  prep.py  pyproject.toml
data/: carelink_20241101_20241130.csv  carelink_20241201_20241217.csv  carelink_20241218_20250116.csv
model/: model.joblib
